fix method name and little refactor of visibility

--- a/src/common/components/navbar/navbar.sass
+++ b/src/common/components/navbar/navbar.sass
@@ -280,9 +280,6 @@
 
 						a
 							&:hover
-								span
-									color: $c-white
-
 								.notifications-count
 									background-color: $c-primary
 									color: $c-white
